# Quantaura

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deploy/: install.sh  quantaura.service  run_windows.bat
quantaura/: __init__.py  backtest.py  bot.py  cli.py  config.py  data.py  engine.py  factor.py  formatting.py  indicators.py  journal.py  manage.py  ml.py  models.py  montecarlo.py  net.py  optimize.py  pairs.py  portfolio.py  risk.py  selftest.py  smc.py  storage.py  strategies.py
tests/: conftest.py  test_bot.py  test_engine.py  test_factor.py  test_indicators.py  test_iran.py  test_manage.py  test_ml_trailing_opt.py  test_montecarlo.py  test_net.py  test_pairs_portfolio.py  test_risk_backtest_pairs.py  test_smc.py  test_storage_journal.py  test_strategies.py
