[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quantaura"
version = "1.0.0"
description = "Backtest-validated quant trading signal bot for Telegram"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "yfinance>=0.2.40",
    "ccxt>=4.3",
    "python-telegram-bot[job-queue,socks]>=21.0",
    "PySocks>=1.7",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
quantaura = "quantaura.cli:main"

[tool.setuptools]
packages = ["quantaura"]

[tool.pytest.ini_options]
testpaths = ["tests"]
